--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                     <br>
                     <p class="email">
                         <i class="fa fa-envelope" style="size:22px;"></i>
-                        <a style="color:#171816;" href="mailto:ieee@gec.in">
+                        <a style="color:#171816;" href="mailto:support@ieeegec.org">
                             <b>ieee@gec.in</b>
                         </a>
                     </p>
