--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
                     <br>
                     <p class="email">
                         <i class="fa fa-envelope" style="size:22px;"></i>
-                        <a style="color:#171816;" href="mailto:ieee@gec.in">
-                            <b>ieee@gec.in</b>
+                        <a style="color:#171816;" href="mailto:support@ieeegec.org">
+                            <b>support@ieeegec.org</b>
                         </a>
                     </p>
                 </div>
