Update the principal section

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <div class="container">
             <div class="row princ">
                 <div class="col-md-6 col-sm-12 col-xs-12">
-                    <img class="princ-img" src="img/admissiopplwelcome1.jpg" alt="Dr. Vinayak Shet">
+                    <img class="princ-img" src="img/PrincipalKrupaShankar.jpg" alt="Dr. Krupashankara M. S.">
                     <h6 style="margin-top:10px">Dr. Vinayak Shet</h6>
                 </div>
                 <div class="princ-words col-md-6 col-sm-12 col-xs-12">
