--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             <div class="row princ">
                 <div class="col-md-6 col-sm-12 col-xs-12">
                     <img class="princ-img" src="img/PrincipalKrupaShankar.jpg" alt="Dr. Krupashankara M. S.">
-                    <h6 style="margin-top:10px">Dr. Vinayak Shet</h6>
+                    <h6 style="margin-top:10px">Dr. Krupashankar M S</h6>
                 </div>
                 <div class="princ-words col-md-6 col-sm-12 col-xs-12">
                     <h1 class="heading-princ">From the principal</h1>
