--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <a class="nav-link nav-item navbarLinks mx-2" id="" href="#"><i class="fas fa-home"></i> Home <span class="sr-only">(current)</span></a>               
                     <a class="nav-link nav-item navbarLinks mx-2" href="#"><i class="fas fa-camera-retro"></i> Gallery</a>                    
                     <a class="nav-link nav-item navbarLinks mx-2" href="#"><i class="fas fa-award"></i> Achievements</a>                        
-                    <a class="nav-link nav-item navbarLinks mx-2" href="#"><i class="fas fa-calendar"></i> Events</a>
+                    <a class="nav-link nav-item navbarLinks mx-2" href="events/index.html"><i class="fas fa-calendar"></i> Events</a>
                   </div>
                 </div>
         </div>
@@ -367,4 +367,5 @@
 
 </body>
 
+</html>
 </html>
