address and contact no. added

--- a/index.html
+++ b/index.html
@@ -287,12 +287,12 @@
                     <h1 class="heading">Reach us</h1>
                     <p class="address">
                         <i class="fa fa-address-book" style="size: 22px;"></i>
-                        <b> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet, fugit! </b>
+                        <b>  "Bhausaheb Bandodkar Technical Education Complex", Farmagudi, Ponda, Goa 403401 </b>
                     </p>
                     <br>
                     <p class="phone">
                         <i class="fa fa-phone"></i>
-                        <a style="color:#171816;" href="tel:+91-9595959050">+91 9595959050</a>
+                        <a style="color:#171816;" href="tel:+91-832-233-6301">+91 832 233 6301</a>
                     </p>
                     <br>
                     <p class="email">
