--- a/events/index.html
+++ b/events/index.html
@@ -12,7 +12,7 @@
         <meta name="keywords" content="ieee, gec, goa engineering college , goa college of engineering, ieee gec,">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>IEEE GEC SB | Page Name </title>
+        <title>IEEE GEC SB | Events</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
@@ -83,7 +83,14 @@
     
     <!--Relevant content begins here-->
 
-    <h1>PAGE UNDER CONSTRUCTION</h1>
+    <div class=" jumbotron bg-white col-md-12 col-sm-12 col-xs-12 text-center animated slideInDown">
+             <div class="imp">
+                <div id="typed-strings">
+                    <span id="typed" style="letter-spacing: 5px;"></span>
+                       Events
+                </div>    
+            </div>
+    </div>
     <br> <br> <br> <br> <br> <br>
     <br> <br> <br> <br> <br> <br>
     <br> <br> <br> <br> <br> <br>
