making paragraphs more responsive

--- a/events/hacktohelp/index.html
+++ b/events/hacktohelp/index.html
@@ -111,14 +111,17 @@
                     <br> <br> <br>
                     
                     <div class="row">
-                        <span class="col">
+                        <span class="col-md-12 col-sm-12 col-xs-12 col-lg-12">
                             The event was kicked off on Friday, 29th March 2019 with Ms. Nutan Kamat from Ajency.in delivering a lecture on 
                             "The Art of Planning", Students then began coding at 2 PM on the same day, with guidance from the able and experienced organising team. <br> <br>
                         </span>
                     </div>
                     
-
-                    <img src="imgs/nutan-1.jpg" class = "nutan-img" alt="Ms. Nutan Kamat delivering a lecture" style = "font-size: 2px;"> <br> <p> <i> Ms. Nutan Kamat delivering her lecture </i> </p>
+                    <div class="row">
+                        <span class="col-md-12 col-sm-12 col-xs-12 col-lg-12">
+                            <img src="imgs/nutan-1.jpg" class = "nutan-img" alt="Ms. Nutan Kamat delivering a lecture" style = "font-size: 2px;"> <br> <p> <i> Ms. Nutan Kamat delivering her lecture </i> </p>
+                        </span>
+                    </div>
                   <!---  <img src="imgs/nutan-2.jpg" class = "nutan-img" alt="Giving a token of our appreciation" -->
 
 
