<b>'d the product name

--- a/events/hacktohelp/index.html
+++ b/events/hacktohelp/index.html
@@ -162,7 +162,7 @@
                     <div class="row winner-section">
                         <div class="col-md-4 col-sm-12 col-xs-10 col-lg-3 winners">
                                 First place: <br>
-                                Major7Flat5 - Digital Bulletin Board, for posting messages for a particular village (HTML CSS React.js) <br>
+                                Major7Flat5 - <b> Digital Bulletin Board</b>, for posting messages for a particular village (HTML CSS React.js)   <br>
                                 Julius Alphonso <br>
                                 Kunal Gude <br>
                                 Aditya Shirodkar <b> (GEC) </b>
@@ -178,7 +178,7 @@
                     <div class="winner-section row">
                         <div class="winners col-md-4 col-sm-9 col-xs-10 col-lg-3">
                             Second place: <br>
-                            Mini Gang - Digitising Rural Areas - Read handwritten forms, digitize them (handwriting and printed word recognition) <br>
+                            Mini Gang - <b> Digitising Rural Areas  </b> - Read handwritten forms, digitize them (handwriting and printed word recognition)  <br>
                             Shivam Kumar	<br>
                             Gaurav Ganna	<b> (IIT Goa) </b> <br>
                         </div>
@@ -195,7 +195,7 @@
                     <div class="row winner-section">
                         <div class="col-md-4 col-sm-9 col-xs-10 col-lg-3 winners">
                             Third place: <br>
-                            Technocrats - Sakhi - An app for care of the baby's vaccination programme (using file handling in C++; 
+                            Technocrats - <b> Sakhi </b> - An app for care of the baby's vaccination programme (using file handling in C++; 
                             future scope - connect to local server of village for periodic updates) <br>
                             T.S. Vishwak	<br>
                             Riddhi Siddarkar	<br>
