updated mission and vision statements

--- a/index.html
+++ b/index.html
@@ -174,16 +174,9 @@
         <div class="row">
             <div id="vision" class="p-5 col-md-6 col-sm-12 col-xs-12">
                 <h1 class="heading">Vision</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum omnis iure sit temporibus est nihil deserunt
-                    illum voluptatem quisquam animi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, rem!
-                </p>
-            </div>
-            <div class="empty"></div>
-
-            <div id="mission" class="p-5 col-md-6 col-sm-12 col-xs-12">
-                <h1 class="heading">Mission</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum omnis iure sit temporibus est nihil deserunt
-                    illum voluptatem quisquam animi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, magnam!
+                <p>
+			To create an environment of innovation and fraternalism, assist in effortless dessemination of new ideas 
+			and provide a platform for earneYou can add repositories to your teams with more flexible levels of access (Admin, Write, Read).You can add repositories to your teams with more flexible levels of access (Admin, Write, Read).			through a wide range of activities.
                 </p>
             </div>
         </div>
