updated "Why join IEEE?" section

--- a/index.html
+++ b/index.html
@@ -184,11 +184,15 @@
     <section class="reason">
         <div class="container">
             <h1 id="why">Why join IEEE?</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur minima asperiores aut pariatur quisquam
-                laudantum ad provident vero iure suscipit. Lorem ipsum dolor sit amet. Lorem ipsum, dolor sit amet consectetur
-                adipisicing elit. Doloribus deserunt dolorum veritatis, necessitatibus similique laboriosam iure, quod veniam
-                tempore sed quo? Non soluta ea provident libero, fugiat eos fuga dolorum facilis similique atque maiores
-                quos, rem nam neque officia, aspernatur aliquid fugit sit eaque? Tempore culpa dolores saepe facere dolor!</p>
+            <p
+	      	IEEE and its members inspire a global community to innovate for a better tomorrow through its more than 
+	       423,000 members in over 160 countries, and its highly cited publications, conferences, technology standards, 
+	       and professional and educational activities. IEEE is the trusted “voice” for engineering, computing, 
+	       and technology information around the globe. The vision of IEEE is to foster Technological innovation and 
+	       excellence for the benefit of humanity. IEEE has immense resources which can transform you from a student to a 
+	       professional and bridge the gap between the academic and industry and one can stay technically updated and network 
+	       with peers by being a part of this society.
+	    </p>
         </div>
     </section>
 
