updated vision and mission statements, again.

--- a/index.html
+++ b/index.html
@@ -176,9 +176,15 @@
                 <h1 class="heading">Vision</h1>
                 <p>
 			To create an environment of innovation and fraternalism, assist in effortless dessemination of new ideas 
-			and provide a platform for earneYou can add repositories to your teams with more flexible levels of access (Admin, Write, Read).You can add repositories to your teams with more flexible levels of access (Admin, Write, Read).			through a wide range of activities.
+			and provide a platform for earnest contributions in various fields of engineering.
                 </p>
             </div>
+	   <div id="mission" class="p-5 col-md-6 col-sm-12 col-xs-12">
+                <h1 class="heading">Mission</h1>
+                <p>
+			To impart and improve technical and non-technical skills & knowledge of members with international 
+			through a wide range of activities.
+                </p>
         </div>
     </div>
     <section class="reason">
