fixed mission statement

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 	   <div id="mission" class="p-5 col-md-6 col-sm-12 col-xs-12">
                 <h1 class="heading">Mission</h1>
                 <p>
-			To impart and improve technical and non-technical skills & knowledge of members with international 
+			To impart and improve technical and non-technical skills & knowledge of members with international standards 
 			through a wide range of activities.
                 </p>
         </div>
