--- a/index.html
+++ b/index.html
@@ -182,8 +182,7 @@
 
             <div id="mission" class="p-5 col-md-6 col-sm-12 col-xs-12">
                 <h1 class="heading">Mission</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum omnis iure sit temporibus est nihil deserunt
-                    illum voluptatem quisquam animi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, magnam!
+                <p>IEEE will be essential to the global technical community and to technical professionals everywhere, and be universally recognized for the contributions of technology and of technical professionals in improving global conditions.
                 </p>
             </div>
         </div>
@@ -191,11 +190,18 @@
     <section class="reason">
         <div class="container">
             <h1 id="why">Why join IEEE?</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur minima asperiores aut pariatur quisquam
-                laudantum ad provident vero iure suscipit. Lorem ipsum dolor sit amet. Lorem ipsum, dolor sit amet consectetur
-                adipisicing elit. Doloribus deserunt dolorum veritatis, necessitatibus similique laboriosam iure, quod veniam
-                tempore sed quo? Non soluta ea provident libero, fugiat eos fuga dolorum facilis similique atque maiores
-                quos, rem nam neque officia, aspernatur aliquid fugit sit eaque? Tempore culpa dolores saepe facere dolor!</p>
+            <p>1.	Access to Technical Resources：IEEE is the world‘s largest technical community, and it has lot of published technical contents available which the student members can access. IEEE provides a wide range of quality publications that make the exchange of technical knowledge and information possible among technology professionals. This essential content, categorized below, is delivered through the IEEE Xplore® Digital Library.
+2.	Volunteering Opportunities：IEEE also provides immense volunteering opportunities to exhibit our skills and to learn new things by starting to volunteer from our Student Branch itself.
+3.	Networking：Student Congresses organized by the IEEE are the ultimate events where you can network with a lot of volunteers. 
+4.	Career Resources and Recognition: Being a student is the first job of your professional career. Let IEEE help with valuable scholarship, and award program opportunities.
+5.	GoogleApps@IEEE provide:
+	30-gigabytes of shared storage (Gmail and Google Drive)
+	Enhanced message organization and retrieval
+	Google powered search feature
+	Easier calendar sharing - Quickly and easily share your calendar
+	A unique IEEE email address (e.g., John.A.Doe@ieee.org)
+	Advertisement-Free Gmail
+</p>
         </div>
     </section>
 
