--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
             <div id="mission" class="p-5 col-md-6 col-sm-12 col-xs-12">
                 <h1 class="heading">Mission</h1>
-                <p>IEEE will be essential to the global technical community and to technical professionals everywhere, and be universally recognized for the contributions of technology and of technical professionals in improving global conditions.
+                <p>To impart and improve technical and non-technical skills & knowledge of members with international standards through wide range of activities
                 </p>
             </div>
         </div>
