--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@
     <section class="reason">
         <div class="container">
             <h1 id="why">Why join IEEE?</h1>
-            <p>1.	Access to Technical Resources：IEEE is the world‘s largest technical community, and it has lot of published technical contents available which the student members can access. IEEE provides a wide range of quality publications that make the exchange of technical knowledge and information possible among technology professionals. This essential content, categorized below, is delivered through the IEEE Xplore® Digital Library.
-2.	Volunteering Opportunities：IEEE also provides immense volunteering opportunities to exhibit our skills and to learn new things by starting to volunteer from our Student Branch itself.
-3.	Networking：Student Congresses organized by the IEEE are the ultimate events where you can network with a lot of volunteers. 
-4.	Career Resources and Recognition: Being a student is the first job of your professional career. Let IEEE help with valuable scholarship, and award program opportunities.
-5.	GoogleApps@IEEE provide:
+            <p>1.	Access to Technical Resources：IEEE is the world‘s largest technical community, and it has lot of published technical contents available which the student members can access. IEEE provides a wide range of quality publications that make the exchange of technical knowledge and information possible among technology professionals. This essential content, categorized below, is delivered through the IEEE Xplore® Digital Library.</p>
+<p>2.	Volunteering Opportunities：IEEE also provides immense volunteering opportunities to exhibit our skills and to learn new things by starting to volunteer from our Student Branch itself.</p>
+<p>3.	Networking：Student Congresses organized by the IEEE are the ultimate events where you can network with a lot of volunteers.</p> 
+<p>4.	Career Resources and Recognition: Being a student is the first job of your professional career. Let IEEE help with valuable scholarship, and award program opportunities.</p>
+<p>5.	GoogleApps@IEEE provide:
 	30-gigabytes of shared storage (Gmail and Google Drive)
 	Enhanced message organization and retrieval
 	Google powered search feature
