--- a/index.html
+++ b/index.html
@@ -190,18 +190,20 @@
     <section class="reason">
         <div class="container">
             <h1 id="why">Why join IEEE?</h1>
-            <p>1.	Access to Technical Resources：IEEE is the world‘s largest technical community, and it has lot of published technical contents available which the student members can access. IEEE provides a wide range of quality publications that make the exchange of technical knowledge and information possible among technology professionals. This essential content, categorized below, is delivered through the IEEE Xplore® Digital Library.</p>
-<p>2.	Volunteering Opportunities：IEEE also provides immense volunteering opportunities to exhibit our skills and to learn new things by starting to volunteer from our Student Branch itself.</p>
-<p>3.	Networking：Student Congresses organized by the IEEE are the ultimate events where you can network with a lot of volunteers.</p> 
-<p>4.	Career Resources and Recognition: Being a student is the first job of your professional career. Let IEEE help with valuable scholarship, and award program opportunities.</p>
-<p>5.	GoogleApps@IEEE provide:
-	30-gigabytes of shared storage (Gmail and Google Drive)
-	Enhanced message organization and retrieval
-	Google powered search feature
-	Easier calendar sharing - Quickly and easily share your calendar
-	A unique IEEE email address (e.g., John.A.Doe@ieee.org)
-	Advertisement-Free Gmail
-</p>
+            <p><ol type="1">
+		<li>1.	Access to Technical Resources：IEEE is the world‘s largest technical community, and it has lot of published technical contents available which the student members can access. IEEE provides a wide range of quality publications that make the exchange of technical knowledge and information possible among technology professionals. This essential content, categorized below, is delivered through the IEEE Xplore® Digital Library.</li>
+<li>2.	Volunteering Opportunities：IEEE also provides immense volunteering opportunities to exhibit our skills and to learn new things by starting to volunteer from our Student Branch itself.</li>
+<li>3.	Networking：Student Congresses organized by the IEEE are the ultimate events where you can network with a lot of volunteers.</li> 
+<li>4.	Career Resources and Recognition: Being a student is the first job of your professional career. Let IEEE help with valuable scholarship, and award program opportunities.</li>
+<li><dl>5.	GoogleApps@IEEE provide:
+<dd>-	30-gigabytes of shared storage (Gmail and Google Drive)</dd>
+<dd>-	Enhanced message organization and retrieval</dd>
+<dd>-	Google powered search feature</dd>
+<dd>-	Easier calendar sharing - Quickly and easily share your calendar</dd>
+<dd>-	A unique IEEE email address (e.g., John.A.Doe@ieee.org)</dd>
+<dd>-	Advertisement-Free Gmail</dd>
+</dl></li>	
+	</ol></p>
         </div>
     </section>
 
