Updated "Why Join?"

--- a/index.html
+++ b/index.html
@@ -191,18 +191,18 @@
         <div class="container">
             <h1 id="why">Why join IEEE?</h1>
             <p><ol type="1">
-		<li>Access to Technical Resources：IEEE is the world‘s largest technical community, and it has lot of published technical contents available which the student members can access. IEEE provides a wide range of quality publications that make the exchange of technical knowledge and information possible among technology professionals. This essential content, categorized below, is delivered through the IEEE Xplore® Digital Library.</li>
-<li>Volunteering Opportunities：IEEE also provides immense volunteering opportunities to exhibit our skills and to learn new things by starting to volunteer from our Student Branch itself.</li>
-<li>Networking：Student Congresses organized by the IEEE are the ultimate events where you can network with a lot of volunteers.</li> 
-<li>Career Resources and Recognition: Being a student is the first job of your professional career. Let IEEE help with valuable scholarship, and award program opportunities.</li>
-<li><dl>GoogleApps@IEEE provide:
-<dd>-	30-gigabytes of shared storage (Gmail and Google Drive)</dd>
-<dd>-	Enhanced message organization and retrieval</dd>
-<dd>-	Google powered search feature</dd>
-<dd>-	Easier calendar sharing - Quickly and easily share your calendar</dd>
-<dd>-	A unique IEEE email address (e.g., John.A.Doe@ieee.org)</dd>
-<dd>-	Advertisement-Free Gmail</dd>
-</dl></li>	
+		<li>Access to Technical Resources：IEEE is the trusted “voice” for engineering, computing, and technology information around the globe. IEEE is the world‘s largest technical community, and it has lot of published technical contents available which the student members can access. This essential content, categorized below, is delivered through the IEEE Xplore® Digital Library.</li>
+		<li>Volunteering Opportunities：IEEE also provides immense volunteering opportunities to exhibit our skills and to learn new things by starting to volunteer from our Student Branch itself.</li>
+		<li>Networking：Student Congresses organized by the IEEE are the ultimate events where you can network with a lot of volunteers. You can stay technically updated and network with peers by being a part of this society.</li> 
+		<li>Career Resources and Recognition: Being a student is the first job of your professional career. Let IEEE help with valuable scholarship, and award program opportunities. IEEE has immense resources which can transform you from a student to a professional and bridge the gap between the academic and industry.</li>
+		<li><dl>GoogleApps@IEEE provide: 
+			<dd>-	30-gigabytes of shared storage (Gmail and Google Drive)</dd>
+			<dd>-	Enhanced message organization and retrieval</dd>
+			<dd>-	Google powered search feature</dd>
+			<dd>-	Easier calendar sharing - Quickly and easily share your calendar</dd>
+			<dd>-	A unique IEEE email address (e.g., John.A.Doe@ieee.org)</dd>
+			<dd>-	Advertisement-Free Gmail</dd>
+		</dl></li>	
 	</ol></p>
         </div>
     </section>
