updated "why join?"

--- a/index.html
+++ b/index.html
@@ -191,10 +191,11 @@
         <div class="container">
             <h1 id="why">Why join IEEE?</h1>
             <p><ol type="1">
-		<li>Access to Technical Resources：IEEE is the trusted “voice” for engineering, computing, and technology information around the globe. IEEE is the world‘s largest technical community, and it has lot of published technical contents available which the student members can access. This essential content, categorized below, is delivered through the IEEE Xplore® Digital Library.</li>
-		<li>Volunteering Opportunities：IEEE also provides immense volunteering opportunities to exhibit our skills and to learn new things by starting to volunteer from our Student Branch itself.</li>
-		<li>Networking：Student Congresses organized by the IEEE are the ultimate events where you can network with a lot of volunteers. You can stay technically updated and network with peers by being a part of this society.</li> 
-		<li>Career Resources and Recognition: Being a student is the first job of your professional career. Let IEEE help with valuable scholarship, and award program opportunities. IEEE has immense resources which can transform you from a student to a professional and bridge the gap between the academic and industry.</li>
+		<li>IEEE and its members inspire a global community to innovate for a better tomorrow through its more than 423,000 members in over 160 countries, and its highly cited publications, conferences, technology standards, and professional and educational activities. </li>
+		<li>IEEE is the trusted “voice” for engineering, computing, and technology information around the globe.</li>
+		<li>The vision of IEEE is to foster Technological innovation and excellence for the benefit of humanity.</li> 
+		<li>IEEE has immense resources which can transform you from a student to a professional and bridge the gap between the academic and industry.</li>
+		<li>You can stay technically updated and network with peers by being a part of this society.</li>
 		<li><dl>GoogleApps@IEEE provide: 
 			<dd>-	30-gigabytes of shared storage (Gmail and Google Drive)</dd>
 			<dd>-	Enhanced message organization and retrieval</dd>
