--- a/index.html
+++ b/index.html
@@ -141,11 +141,12 @@
         <div class="row">
             <div id="vision" class="p-5 col-md-6 col-sm-12 col-xs-12">
                 <h1 class="heading">Vision</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum omnis iure sit temporibus est nihil deserunt
-                    illum voluptatem quisquam animi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, rem!
+                <p>
+		    To create an environment of innovation and fraternalism, assist in effortless dessemination of new ideas 
+			and provide a platform for earnest contributions in various fields of engineering.
                 </p>
             </div>
-            <div class="empty"></div>
+            
 
             <div id="mission" class="p-5 col-md-6 col-sm-12 col-xs-12">
                 <h1 class="heading">Mission</h1>
