--- a/events/index.html
+++ b/events/index.html
@@ -36,9 +36,9 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <div class="navbar-nav mr-auto" id="darkBG">
                         <a class="nav-link nav-item navbarLinks mx-2" id="" href="../"><i class="fas fa-home"></i> Home <span class="sr-only">(current)</span></a>               
-                        <a class="nav-link nav-item navbarLinks mx-2" href="#"><i class="fas fa-camera-retro"></i> Gallery</a>                    
-                        <a class="nav-link nav-item navbarLinks mx-2" href="#"><i class="fas fa-award"></i> Achievements</a>                        
+                        <a class="nav-link nav-item navbarLinks mx-2" href="#"><i class="fas fa-camera-retro"></i> Gallery</a>                        
                         <a class="nav-link nav-item navbarLinks mx-2" href="/events/index.html"><i class="fas fa-calendar"></i> Events</a>
+                        <a class="nav-link nav-item navbarLinks mx-2" href="#"><i class="fas fa-info-circle"></i> About</a>
                     </div>
                     </div>
             </div>
@@ -46,7 +46,7 @@
     
     <!--Relevant content begins here-->
 
-    <div class="container-fluid px-0">
+    <div class="container-fluid px-0 w-100">
         <!-- pair 1 -->
         <div class="row align-items-center">
             <div class="col-md-6 text-center text-primary pt-5 py-md-4 order-1">
