--- a/events/hacktohelp/index.html
+++ b/events/hacktohelp/index.html
@@ -53,7 +53,7 @@
                         <a class="nav-link nav-item navbarLinks mx-2" id="" href="../../"><i class="fas fa-home"></i> Home <span class="sr-only">(current)</span></a>               
                         <a class="nav-link nav-item navbarLinks mx-2" href="#"><i class="fas fa-camera-retro"></i> Gallery</a>                    
                         <a class="nav-link nav-item navbarLinks mx-2" href="/events/index.html"><i class="fas fa-calendar"></i> Events</a>
-                        <a class="nav-link nav-item navbarLinks mx-2" href="#"><i class="fas fa-info-circle"></i> About</a>
+                        <a class="nav-link nav-item navbarLinks mx-2" href="/about/index.html"><i class="fas fa-info-circle"></i> About</a>
                     </div>
                     </div>
             </div>
