reset previous few commits

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     
     <nav id="mainNavbar" class="navbar navbar-expand-md fixed-top">
         <div class="container-fluid">
-                <a class="navbar-brand my-0 py-0" data-toggle="modal" data-target="#logoModal" href="/"><img src="img/imgs/ieeesb_transparent_logo.png" height="40" width="77" id="brand_logo" alt="IEEE_GEC_logo"></a>
+                <a class="navbar-brand my-0 py-0" data-toggle="modal" data-target="#logoModal" href="/"><img src="img/imgs/ieeesb_transparent_logo.png" height="40px" id="brand_logo" alt="IEEE_GEC_logo"></a>
                 <button class="navbar-toggler" id="toggleButton" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class=""><i class="far fa-caret-square-down"></i></span>
                 </button>
